--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2 class="Sc">schooter</h2>
     </div>
     <div class="topnav">
-        <a href="#about"><img src="C:\Users\Windows\Downloads\icon.png" width="20px" height="20px"></a>
+        <a href="#about"><img src="ic.png" width="20px" height="20px"></a>
         <a class="active" href="#home">contact</a>
         <a href="#news">wheels</a>
         <a href="#contact">scooter</a>
@@ -65,7 +65,7 @@
 
       </div>
       <div class="y">
-      <img src="C:\Users\Windows\Downloads\scooter.jpeg" width="500px" height="500px">
+      <img src="sc.jpeg" width="500px" height="500px">
       </div>
       <div class="par">
           <h2 class="h">semi<br>auto</h2>
