--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2 class="Sc">schooter</h2>
     </div>
     <div class="topnav">
-        <a href="#about"><img src="ic.png" width="20px" height="20px"></a>
+        <a href="#about"><img src="ui.png" width="20px" height="20px"></a>
         <a class="active" href="#home">contact</a>
         <a href="#news">wheels</a>
         <a href="#contact">scooter</a>
